# crewai-mongodb-memory

./: .gitignore  AGENTS.md  EDD.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: agent_demo.py  cli_demo.py  memory_demo.py  requirements.txt
outreach/: blog.md  integrations-log-update.md  social.md
src/crewai_mongodb_memory/: __init__.py  backend.py  conversation.py  embeddings.py
tests/: conftest.py  test_acceptance.py  test_conversation.py
