[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-mongodb-memory"
version = "0.1.0"
description = "MongoDB Atlas-backed StorageBackend (memory store) for CrewAI's Unified Memory System."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "MongoDB Developer Relations" }]
keywords = ["crewai", "mongodb", "atlas", "agent", "memory", "vector-search", "storage-backend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pymongo>=4.6",
    "pydantic>=2.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.100"]
embeddings = ["voyageai>=0.3.0"]
dev = [
    "pytest>=8.0",
    "mongomock>=4.1",
    "voyageai>=0.3.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/mongodb-developer/crewai-mongodb-memory"
Repository = "https://github.com/mongodb-developer/crewai-mongodb-memory"
Issues = "https://github.com/crewAIInc/crewAI/pull/5919"

# Constrain the build to this directory's `src/` so editable installs don't walk
# parent directories (which fails outside this package's tree).
[tool.hatch.build.targets.wheel]
packages = ["src/crewai_mongodb_memory"]

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "demo", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
